# dmlog-agent

./: README.md  agent.py  pyproject.toml
.spark/: SHELL.md
.spark/active/: task-001.md
.spark/decisions/: decision-001.md
.spark/domain/: concept-001.md
.spark/lessons/: observation-001.md
.spark/questions/: hypothesis-001.md
dmlog_agent/: __init__.py
tests/: test_dmlog_agent.py
