[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmlog-agent"
version = "0.2.0"
description = "Agent framework for D&D and tabletop RPG campaign management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cocapn", email = "cocapn@example.com" }
]
keywords = ["D&D", "RPG", "dungeon master", "campaign", "tabletop", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://dmlog.ai"
Documentation = "https://github.com/SuperInstance/dmlog-agent"
Repository = "https://github.com/SuperInstance/dmlog-agent"
Issues = "https://github.com/SuperInstance/dmlog-agent/issues"

dependencies = [
    "fleet-agent>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dmlog_agent"]
dependencies = ["domain-agent-base @ git+https://github.com/SuperInstance/domain-agent-base.git"]
